@@ -2,7 +2,9 @@ kadnode (1.0) UNRELEASED; urgency=low
 
   * add --query-tld option to configure the top level domain
     used to divert DNS queries to KadNode (default is .p2p)
-  * cache results for 20 minutes instead of just 5
+  * set search results lifetime to 20 minutes instead of just 5
+  * restart a search only if there are no valid results or more
+    than half of the search results lifetime has expired.
   * export peers not only at program exit, but every 24 hours
 
  -- mwarning <moritzwarning@web.de>  Sun, 18 May 2014 16:51:22 +0200
